# asimov-gemini-module

./: AUTHORS  CHANGES.md  Cargo.toml  README.md
.asimov/: module.yaml
src/: blocks.rs  lib.rs  main.rs  prelude.rs
src/blocks/: gemini.rs
src/blocks/gemini/: model.rs
src/prompter/: main.rs
