# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-gemini-module"
version = "0.0.1"
authors = ["ASIMOV AI <support@asimov.so>"]
edition = "2021"
rust-version = "1.70"
description = "ASIMOV Gemini Module"
#documentation = ""
readme = true
homepage = "https://github.com/AsimovModules"
repository = "https://github.com/AsimovModules/asimov-gemini-module"
license = "Unlicense"
keywords = ["asimov", "ai", "gemini"]
categories = []
publish = true

[features]
default = ["std", "tracing"]
std = ["asimov-sdk/std", "tracing?/std"]
tracing = ["dep:tracing", "asimov-sdk/tracing"]

[dependencies]
#asimov-sdk = "24"
asimov-sdk = { version = "=24.0.0-dev.8", default-features = false }
protoflow-core = { version = "=0.2.0", default-features = false}
tracing = { version = "0.1", optional = true, default-features = false }
asimov-integrations = { git = "ssh://git@github.com/AsimovPlatform/asimov-integrations.git", branch = "rel/24.0.0-dev.3", default-features = false, features = [
    "gemini",
] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
tokio = { version = "1.39.3"}
